# PolarCodes

./: .gitignore  CMakeLists.txt  Channel.cpp  Channel.h  GnCosetCode.h  LICENSE  README.md
.circleci/: config.yml
cmake/: gtest.cmake
src/: CMakeLists.txt  Channel.cpp  Channel.h  GnCosetCode.cpp  GnCosetCode.h  PolarCode.cpp  PolarCode.h
src/channel/: BEC.cpp  BEC.h  BSC.cpp  BSC.h  Channel.cpp  Channel.h
test/: CMakeLists.txt  PolarCode.cpp
test/channel/: CMakeLists.txt  bec.cpp  bsc.cpp
